--- a/_posts/2023/2023-06-18-TestPage.md
+++ b/_posts/2023/2023-06-18-TestPage.md
@@ -3,7 +3,10 @@ title: Test Page
 date: 2023-11-30 21:52:00 +0300
 categories: [Test]
 tags: [test-page]     # TAG names should always be lowercase
+image:
+  path: /assets/img/under_construction.png
+  alt: Under Construction
 ---
 
-Testing...
+Testing, attention please!
 
