Fixed typo at post: Storytel

--- a/_posts/2024/2024-01-11-Storytel.md
+++ b/_posts/2024/2024-01-11-Storytel.md
@@ -8,7 +8,7 @@ image:
   alt: Bu bir reklam değildir!
 ---
 
-Bu yazımda sizlerle yaklaşık 2 yıldır kullandığım `Storytel` uygulamasından bahsetmek istiyorum. Öncelikle şunu hemen belirteyim, hiçbir şekilde reklam almadım ve bu yazımdan maddi bir kazancım yok. 2 yıldır eşimle birlikte kullanmaya başladığım bu uygulama sayesinde 40'un üstünde kitap dinledim. Ve bunu yaparken de çoğunluka *oturayım da bir kitap dinleyeyim* demedim. Onun yerine işe giderken, şehirler arası yolculuklarımda ya da angarya bir işle uğraşırken bu kitapları dinledim. Belki okumak için zaman bulmakta zorlanacağım fikirleri bu sayede kolayca erişip üstünde düşünme imkanım oldu. Kimi kitapları zaten okumuş olmama rağmen seslendiren kişinin hatrına tekrar dinledim. Seslendirme sanatçılarının sesleri ile kitap dinlemek gerçekten bambaşka bir keyif veriyor. Hatta sizlere dinlediğim kitaplardan birkaç tanesini de önereyim.
+Bu yazımda sizlere yaklaşık 2 yıldır kullandığım `Storytel` uygulamasından bahsetmek istiyorum. Öncelikle şunu hemen belirteyim, hiçbir şekilde reklam almadım ve bu yazımdan maddi bir kazancım yok. 2 yıldır eşimle birlikte kullanmaya başladığım bu uygulama sayesinde 40'un üstünde kitap dinledim. Ve bunu yaparken de çoğunluka *oturayım da bir kitap dinleyeyim* demedim. Onun yerine işe giderken, şehirler arası yolculuklarımda ya da angarya bir işle uğraşırken bu kitapları dinledim. Belki okumak için zaman bulmakta zorlanacağım fikirleri bu sayede kolayca erişip üstünde düşünme imkanım oldu. Kimi kitapları zaten okumuş olmama rağmen seslendiren kişinin hatrına tekrar dinledim. Seslendirme sanatçılarının sesleri ile kitap dinlemek gerçekten bambaşka bir keyif veriyor. Hatta sizlere dinlediğim kitaplardan birkaç tanesini de önereyim.
 
 * [_Outliers_](https://www.storytel.com/tr/books/outliers-çizginin-dışındakiler-bazı-insanlar-neden-daha-başarılı-olur-1352618)
 
